--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/serialize": "^1.3.3",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
+    "@reduxjs/toolkit": "^2.10.1",
     "bootstrap": "^5.3.8",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
