--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "cors": "^2.8.5",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
